# lprc_robot

lprc_robot_base/: CMakeLists.txt  package.xml
lprc_robot_bringup/: CMakeLists.txt  package.xml
lprc_robot_bringup/launch/: bringup.launch.py
lprc_robot_description/: CMakeLists.txt  package.xml
lprc_robot_description/launch/: description.launch.py
lprc_robot_description/urdf/: mecanum_properties.urdf.xacro
lprc_robot_description/urdf/mech/: base.urdf.xacro
lprc_robot_description/urdf/robots/: mecanum.urdf.xacro
lprc_robot_description/urdf/sensors/: generic_laser.urdf.xacro
lprc_robot_gazebo/: CMakeLists.txt  package.xml
lprc_robot_gazebo/env-hooks/: lprc_robot_gazebo.sh.in
lprc_robot_gazebo/launch/: gazebo.launch.py
lprc_robot_navigation/: CMakeLists.txt  package.xml
lprc_robot_navigation/launch/: navigation.launch.py
