<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lprc_robot_base</name>
  <version>0.0.0</version>
  <description>LPRC Robot Base Package</description>
  <maintainer email="matthew.shen@ufl.edu">Matthew Shen</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
