<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>lprc_robot_gazebo</name>
    <version>0.0.0</version>
    <description>LPRC Robot Gazebo Package</description>
    <maintainer email="matthew.shen@ufl.edu">Matthew Shen</maintainer>
    <license>Apache License 2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <exec_depend>robot_localization</exec_depend>
    <exec_depend>gazebo_ros_pkgs</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>image_proc</exec_depend>
    <exec_depend>depth_image_proc</exec_depend>
    <exec_depend>python-trimesh-pip</exec_depend>
    <exec_depend>python3-numpy</exec_depend>
    <exec_depend>python3-pycollada</exec_depend>
    <exec_depend>python3-scipy</exec_depend>
    <exec_depend>python3-networkx</exec_depend>
    <exec_depend>python3-opencv-contrib-python</exec_depend>
    <exec_depend>python3-matplotlib</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
